<resources>
    <string name="app_name">THE Slider</string>

    <string name="sample_string">This is a Sample String</string>
    <string name="sample_text">SAMPLE</string>
    <string name="sample_text_medium">
        Android is a mobile operating system developed by Google.
        It is based on a modified version of the Linux kernel and other open source software,
        and is designed primarily for touchscreen mobile devices such as smartphones and tablets.
    </string>
    <string name="page_indicator">/</string>
    <string name="sample_number">01</string>
    <string name="sample_number2">04</string>
    <string name="search_title">Search</string>
    <string name="action_bar_search_desc">search button</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Filter your feed &#8230;</string>
    <string name="search_reuters">REUTERS</string>
    <string name="search_time">TIME</string>
    <string name="search_wwf">WWF</string>
    <string name="search_contains">contains search results</string>
    <string name="search_results">SEARCH RESULTS\t:\t%1$d</string>
    <string name="time_inner_slide">time_inner_slide</string>
    <string name="time_outer_slide">time_outer_slide</string>
    <string name="found_reuters">REUTERS : found</string>
    <string name="results">results\n</string>
    <string name="last_results">results</string>
    <string name="found_wwf">WWF : found</string>
    <string name="found_time">TIME : found</string>
    <string name="search_finished">Search Finished</string>
    <string name="no_result">NO RESULT !</string>

</resources>
