<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorTransparent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_time_inner"
        card_view:cardCornerRadius="20dp"
        card_view:cardUseCompatPadding="true"
        android:elevation="8dp"
        android:background="@color/colorBlack"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="320dp">

        <ImageView
            android:id="@+id/image_view_time_inner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/time_inner_slide" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/scrim_gradient_to_below"
            />



        <TextView
            android:id="@+id/tv_time_inner_content_title"
            android:layout_gravity="center|bottom"
            android:background="@color/colorTransparentBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/view_margin_min"
            android:paddingEnd="@dimen/view_margin_min"
            android:layout_margin="@dimen/view_margin_1x"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/colorWhite"
            android:textStyle="italic|bold"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="top|end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_article_page_number_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/greenIshGrey"
            android:text="@string/sample_number"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/tv_article_page_slash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginEnd="4dp"
            android:text="@string/page_indicator"
            android:textColor="@color/greenIshGrey"
            android:textSize="@dimen/text_size_small"
            android:layout_alignEnd="@+id/tv_article_page_number_total"
            />
        <TextView
            android:id="@+id/tv_article_page_number_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/sample_number2"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/greenIshGrey"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/text_size_small"
            />


        </LinearLayout>


        <ImageButton
            android:id="@+id/custom_fab_play_youtube"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:layout_margin="16dp"
            android:background="@drawable/oval_ripple"
            android:src="@drawable/ic_play_circle_outline_black_24dp"
            android:elevation="6dp"
            android:stateListAnimator="@animator/fab_raise"
            />


    </androidx.cardview.widget.CardView>




</FrameLayout>