<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">


        <RelativeLayout
            android:background="@color/colorWhite"
            android:layout_margin="@dimen/view_margin_min"
            android:elevation="4dp"
            android:layout_width="match_parent"
            android:layout_height="200dp">


                <TextView
                    android:id="@+id/tv_nasa_video_title"
                    android:textStyle="italic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/view_margin_1x"
                    android:layout_marginTop="@dimen/view_margin_1x"
                    android:layout_marginEnd="@dimen/view_margin_4x"
                    android:text="@string/sample_string"
                    android:textSize="@dimen/text_size_medium" />

                <!--<ImageButton-->
                    <!--android:id="@+id/img_info_button_nasa_below"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_alignParentEnd="true"-->
                    <!--android:layout_marginTop="@dimen/view_margin_2x"-->
                    <!--android:layout_marginEnd="@dimen/view_margin_2x"-->
                    <!--android:background="@color/colorTransparent"-->
                    <!--android:src="@drawable/ic_info_black_24dp"/>-->



        <TextView
            android:id="@+id/tv_nasa_video_pubDate"
            android:text="@string/sample_text"
            android:layout_below="@id/tv_nasa_video_title"
            android:layout_marginStart="@dimen/view_margin_1x"
            android:layout_marginEnd="@dimen/view_margin_1x"
            android:textSize="@dimen/text_size_x_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_below="@id/tv_nasa_video_pubDate"
            android:layout_width="wrap_content"
            android:layout_height="120dp">

        <TextView
            android:id="@+id/tv_nasa_video_description"
            android:text="@string/sample_text_medium"
            android:layout_marginTop="@dimen/view_margin_1x"
            android:layout_marginStart="@dimen/view_margin_1x"
            android:layout_marginEnd="@dimen/view_margin_1x"
            android:layout_marginBottom="@dimen/view_margin_1x"
            android:paddingBottom="@dimen/view_margin_1x"
            android:textSize="@dimen/text_size_small"
            android:isScrollContainer="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        </ScrollView>

        </RelativeLayout>


        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager_nasa_more_videos"
            android:elevation="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingEnd="100dp"
            android:paddingStart="100dp"
            >
        </androidx.viewpager.widget.ViewPager>


</LinearLayout>
